# react-shahmat

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  LICENSE  OVERLAP_ANALYSIS.md  README.md  TODO.md  eslint.config.mjs  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  deploy.yml  publish.yml
.vercel/: project.json
chess-engine/: Cargo.toml
chess-engine/src/: chess.rs  lib.rs
demo/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/public/: index.html
demo/src/: App.css  App.tsx  index.css
demo/src/examples/: CustomPieces.tsx  (+11 more)
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
public/: manifest.json
src/: App.css  App.tsx  assets.d.ts  index.ts  types.ts
src/components/: ArrowOverlay.tsx  BoardDndProvider.tsx  ChessBoard.css  ChessBoard.module.css  ChessBoard.tsx  CustomDragLayer.tsx  DragCanceller.tsx  GameEndBadge.tsx  PieceAnimations.tsx  PromotionDialog.tsx  SparePiece.tsx  Square.tsx
src/engine/: chessRules.ts  jsChessEngine.ts
src/hooks/: useBoardClicks.ts  useBoardDragDrop.ts  useBoardKeyboard.ts  useBoardUIState.ts  useChessGame.ts  useChessRules.ts  useCustomDrag.ts  useJSChessEngine.ts  usePieceAnimations.ts  useStockfish.ts
src/sounds/: LICENSE
src/utils/: pieceIcons.ts  pieceMovements.ts  premoveCandidates.ts  soundManager.ts
tests/: chessBoard.test.tsx  chessRules.test.ts  navswap.test.tsx  perft-deep.test.ts  positionEditor.test.tsx  soundManager.ssr.test.ts
(+13 files in other folders)
